--- a/src/App.Microservices.Categories/appsettings.json
+++ b/src/App.Microservices.Categories/appsettings.json
@@ -2,12 +2,16 @@
   "Logging": {
     "LogLevel": {
       "Default": "Information",
-      "Microsoft.AspNetCore": "Warning"
+      "Microsoft.AspNetCore": "Warning",
+      "Microsoft.Hosting.Lifetime": "Information"
+    },
+    "File": {
+      "MinimumLogEventLevel": "Information"
     }
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "sqlite": "DataSource=../../store/category.db",
+    "sqlite": "DataSource=../../store/categories.db",
     "SqlServer": "Data Source=DESKTOP-ROLHND2;Database=Ms_Arch_Category;Integrated Security=True;Connect Timeout=30;Encrypt=False;TrustServerCertificate=False;ApplicationIntent=ReadWrite;MultiSubnetFailover=False"
   }
 }
