Added: 1) Multi-Dbcontex in genric form

--- a/src/App.Microservices.AuthServer/appsettings.json
+++ b/src/App.Microservices.AuthServer/appsettings.json
@@ -10,6 +10,7 @@
     }
   },
   "AllowedHosts": "*",
+  "Provider": "sqlite",
   "ConnectionStrings": {
     "sqlite": "DataSource=../../store/auth.db",
     "SqlServer": "Data Source=DESKTOP-ROLHND2;Database=Ms_Arch_AuthDb;Integrated Security=True;Connect Timeout=30;Encrypt=False;TrustServerCertificate=False;ApplicationIntent=ReadWrite;MultiSubnetFailover=False"
