--- a/src/App.Microservices.Products/appsettings.json
+++ b/src/App.Microservices.Products/appsettings.json
@@ -9,6 +9,7 @@
     }
   },
   "AllowedHosts": "*",
+  "Provider": "sqlite",
   "ConnectionStrings": {
     "sqlite": "DataSource=../../store/products.db",
     "SqlServer": "Data Source=DESKTOP-ROLHND2;Database=Ms_Arch_Product;Integrated Security=True;Connect Timeout=30;Encrypt=False;TrustServerCertificate=False;ApplicationIntent=ReadWrite;MultiSubnetFailover=False"
