--- a/dot-net-core-c#/DOMTrace/DOMTrace.csproj
+++ b/dot-net-core-c#/DOMTrace/DOMTrace.csproj
@@ -20,4 +20,19 @@
       <EmbeddedResource Include="Scripts\highlight-tracker.js" />
     </ItemGroup>
 
+    <ItemGroup>
+      <Compile Update="Settings.Designer.cs">
+        <DesignTimeSharedInput>True</DesignTimeSharedInput>
+        <AutoGen>True</AutoGen>
+        <DependentUpon>Settings.settings</DependentUpon>
+      </Compile>
+    </ItemGroup>
+
+    <ItemGroup>
+      <None Update="Settings.settings">
+        <Generator>SettingsSingleFileGenerator</Generator>
+        <LastGenOutput>Settings.Designer.cs</LastGenOutput>
+      </None>
+    </ItemGroup>
+
 </Project>
